[gd_scene load_steps=4 format=3 uid="uid://buf2ey063n8fg"]

[ext_resource type="Texture2D" uid="uid://dgcmdmtothhfx" path="res://Assets/Backgrounds/BGsquares.png" id="1_p6hsk"]
[ext_resource type="Script" path="res://Scripts/recolorBG.gd" id="2_1e0dd"]
[ext_resource type="AudioStream" uid="uid://cprwp14isnyfj" path="res://Assets/Wrong.mp3" id="3_kjsni"]

[node name="Background" type="Node2D"]
z_index = -10
script = ExtResource("2_1e0dd")
countdownTime = 300

[node name="ColorBG" type="Sprite2D" parent="."]
z_index = -10
texture_filter = 1
scale = Vector2(6, 6)
texture = ExtResource("1_p6hsk")
centered = false

[node name="HexCode" type="Label" parent="."]
z_index = -9
offset_right = 1136.0
offset_bottom = 648.0
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 50
text = "#FFDFBF"
horizontal_alignment = 2

[node name="Countdown" type="Label" parent="."]
z_index = -9
offset_right = 1152.0
offset_bottom = 648.0
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 75
text = "00:00:00"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="Countdown"]
autostart = true

[node name="Strike1" type="Label" parent="."]
z_index = -9
offset_right = 960.0
offset_bottom = 648.0
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 75
text = "X"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Strike2" type="Label" parent="."]
z_index = -9
offset_right = 1152.0
offset_bottom = 648.0
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 75
text = "X"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Strike3" type="Label" parent="."]
z_index = -9
offset_left = 192.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 75
text = "X"
horizontal_alignment = 1
vertical_alignment = 2

[node name="PuzzleCounter" type="Label" parent="."]
offset_left = 16.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 50
text = "0"
vertical_alignment = 2

[node name="Strike_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kjsni")

[connection signal="timeout" from="Countdown/Timer" to="." method="_on_timer_timeout"]
